editor/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: editor
spec:
  selector:
    name: editor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
