editor/ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: editor
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: cdrive.columbusecosystem.com
    http:
      paths: 
      - path: /editor(/|$)(.*)
        backend:
          serviceName: editor
          servicePort: 80
  tls:
  - secretName: tls-prod-cert
    hosts:
    - cdrive.columbusecosystem.com
